--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "egg-bin dev"
+    "dev": "egg-bin dev",
+    "dbup": "npx sequelize db:migrate"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,12 @@
   },
   "homepage": "https://github.com/xiaoyifan6/super_api#readme",
   "dependencies": {
-    "egg": "^2.26.0"
+    "egg": "^2.26.0",
+    "egg-sequelize": "^5.2.1",
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {
-    "egg-bin": "^4.14.1"
+    "egg-bin": "^4.14.1",
+    "sequelize-cli": "^5.5.1"
   }
 }
