--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "egg-bin dev",
+    "start": "egg-scripts start --title=egg-server-decerts-api-server",
+    "stop": "egg-scripts stop --title=egg-server-decerts-api-server",
     "dbup": "npx sequelize db:migrate"
   },
   "repository": {
