--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/xiaoyifan6/super_api#readme",
   "dependencies": {
+    "easy-monitor": "^2.2.7",
     "egg": "^2.26.0",
     "egg-cors": "^2.2.3",
     "egg-sequelize": "^5.2.1",
