--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "egg": "^2.26.0",
     "egg-cors": "^2.2.3",
     "egg-sequelize": "^5.2.1",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "token": "^0.1.0"
   },
   "devDependencies": {
     "egg-bin": "^4.14.1",
